<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logoIV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                tools:srcCompat="@drawable/voda" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/vodafone" />

                <TextView
                    android:id="@+id/positionTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="@string/vodafone_title" />

                <TextView
                    android:id="@+id/durationTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="@string/jun_2022_present" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>