<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.contact.ContactFragment"
    android:clipToPadding="false"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="casual"
                android:text="My Contacts"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/callBtn"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_baseline_phone_24"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/phone"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mobile"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailBtn"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_baseline_email_24"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/email"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linkedinBtn"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/linkedin_contact" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/linkedIn_link_title"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="LinkedIn Website" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/githubBtn"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/github"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/github_link_title"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Github" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pdfBtn"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_baseline_picture_as_pdf_24"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="PDF"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Resume PDF" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>